preenchido informações padroes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,13 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "meu_modulo"
-version = "0.1.0"
-description = "Biblioteca de automação com Selenium para compra de camisas."
+name = "Automatizacao Selenium"
+version = "1.0.0"
+description = "Biblioteca de automação com Selenium para testes na tela de login."
 readme = "README.md"
-authors = [{name = "Seu Nome", email = "seu.email@email.com"}]
+authors = [{name = "Gustavo Pimenta Cordeiro", email = "gustavopimenta90@gmail.com"}]
 license = {text = "MIT"}
 dependencies = ["selenium", "webdriver_manager"]
 
 [project.urls]
-"Homepage" = "https://github.com/seu_usuario/meu_modulo"
+"Homepage" = "https://github.com/gnobisP/automatizacaoSelenium"
